# faststack

./: .gitignore  ChangeLog.md  MANIFEST.in  README.md  debug_al.py  git.instructions.txt  implementation_summary.md  inspect_app.py  pyproject.toml  pytest.ini  repro_crash.py  reproduce_bug.py  reproduce_bug_case.py  reproduce_config_issue.py  reproduce_issue.py  reproduce_mmap_error.py  run_app.py  test_cachetools_api.py  test_max_bytes.py  verify_fix.py  verify_fix_auto_levels.py  verify_fix_simple.py
faststack/: __main__.py  all_verification_results.txt  all_verification_results_utf8.txt  app.py  check_daemon.py  check_scipy.py  config.py  debug_path_norm.py  deletion_types.py  full_test_output.txt  funcs.txt  integration_results.txt  integration_traceback.txt  logging_setup.py  models.py  out.txt  path_check.txt  reactive_test_output.txt  refresh_test.txt  refresh_test_result.txt  repro.py  repro_cache_lock.py  repro_daemon_bug.py  repro_imports.py  repro_status.py  repro_success.py  repro_type_error.py  result.txt  rotation_error.txt  test_err.txt  test_errors.txt  test_errors_full.txt  test_errors_v3.txt  test_errors_v4.txt  test_errors_v5.txt  test_executors.py  test_log.txt  test_manual_output.txt  test_pil_blur.py  test_post_correction.txt  (+14 more)
faststack/imaging/: cache.py  editor.py  jpeg.py  mask.py  mask_engine.py  masked_ops.py  math_utils.py  metadata.py  optional_deps.py  orientation.py  prefetch.py  turbo.py
faststack/io/: deletion.py  executable_validator.py  helicon.py  indexer.py  sidecar.py  utils.py  variants.py  watcher.py
faststack/qml/: BatchProgressDialog.qml  Components.qml  DarkenToolPanel.qml  DeleteBatchDialog.qml  ExifDialog.qml  FilterDialog.qml  HistogramWindow.qml  ImageEditorDialog.qml  JumpToImageDialog.qml  Main.qml  MenuActionItem.qml  QuitBatchesDialog.qml  SettingsDialog.qml  SingleChannelHistogram.qml  ThumbnailGridView.qml  ThumbnailTile.qml
faststack/tests/: benchmark_decode.py  benchmark_decode_bilinear.py  check_imports.py  check_turbo.py  conftest.py  debug_app_init.py  debug_editor_error.py  debug_exif.py  debug_metadata.py  manual_test_error_handling.py  mini_test.py  repro_futures_cleanup.py  reproduce_exif_bug.py  result.txt  run_loading_tests.py  test_auto_adjust_regressions.py  test_auto_levels.py  test_auto_white_balance.py  test_bulk_metadata_map.py  test_cache.py  test_cache_invalidation.py  test_cache_replacement_callback.py  test_cache_size_clamping.py  test_config_setters.py  test_delete_worker_edge_cases.py  test_delete_worker_integration.py  test_deletion_perf_structure.py  test_deletion_unification.py  test_developed_sorting.py  test_drag_logic.py  test_editor.py  test_editor_error_handling.py  test_editor_integration.py  test_editor_lifecycle_and_safety.py  test_editor_loading.py  test_editor_no_copy.py  test_editor_reopening.py  test_editor_rotation.py  test_esc_histogram.py  test_executable_validator.py  (+50 more)
faststack/tests/thumbnail_view/: test_folder_stats.py  test_model.py  test_model_refresh_contract.py  test_prefetcher.py  test_prefetcher_priority.py  test_provider.py  test_provider_logic.py  test_qml_delegate_contract.py  test_reason_tracking.py  test_selection.py  test_thumbnail_ready.py
faststack/thumbnail_view/: __init__.py  folder_stats.py  model.py  prefetcher.py  provider.py
faststack/ui/: keystrokes.py  provider.py
faststack/util/: executors.py  thumb_debug.py
lightroom-catalog-import/: README.lightroom-catalog-import.md  green-sample.paths.txt  green.txt  green2faststack.py  inspect_lrcat_photo.py  lrcat_diff.py  test_lrcat_join.py
scripts/: smoke_verify.py
tests/: debug_import.py  repro_exif_fix.py  test_highlights_v2.py  verify_manual.py  verify_raw_mode.py
