[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faststack"
version = "1.6.2"
authors = [
    { name = "Alan Rockefeller" },
]
description = "Ultra-fast JPG Viewer for Focus Stacking Selection"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PySide6>=6.0,<7.0",
    "PyTurboJPEG>=1.8,<2.0",
    "numpy>=2.0,<3.0",
    "cachetools>=5.0,<6.0",
    "watchdog>=4.0,<5.0",
    "Pillow>=10.0,<11.0",
    # OpenCV 4.10+ might be required for NumPy 2.0 binary compatibility
    "opencv-python>=4.10.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.13,<0.14",
    "black>=25.0,<26.0",
    "build",
    "twine",
]

[project.scripts]
faststack = "faststack.app:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["faststack*"]

[tool.setuptools.package-data]
faststack = ["qml/**/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["faststack/tests"]
python_files = ["test_*.py"]

# Use importlib mode to avoid test import-path resolution issues
addopts = "--import-mode=importlib -p no:cacheprovider -p no:doctest --basetemp=./var/pytest-temp"

norecursedirs = ["var", ".venv", "cache", "faststack.egg-info", "__pycache__"]
pythonpath = ["."]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"faststack/app.py" = ["E402", "I001", "F401"]
"faststack/tests/run_loading_tests.py" = ["E402"]
"faststack/tests/repro_futures_cleanup.py" = ["E402"]
"faststack/tests/reproduce_exif_bug.py" = ["E402"]
"faststack/tests/test_exif_compat.py" = ["E402"]
"faststack/tests/test_headroom_semantics.py" = ["E402"]
"faststack/tests/test_highlights_responsiveness.py" = ["E402"]
"faststack/tests/test_highlights_v2.py" = ["E402"]
"faststack/tests/test_prefetch_logic.py" = ["E402"]
"faststack/util/executors.py" = ["E402"]
"faststack/tests/test_highlight_recovery.py" = ["F401"]
